# cpp_starter_project

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  conanfile.txt  readme.md
src/qt5_example/: main.cpp
src/sqlite_example/: main.cpp
